@@ -220,6 +220,26 @@ a.csv_download:hover		{background-color:#000; color:#FFF;}
 .act_wrap					{width:960px; margin:0 auto; padding:20px 0;}
 
 
+/*	For url #view=search
+	============================================= */
+.search_label				{color:#000; border-bottom:1px solid #000;}
+#search_div					{color:#000;}
+a#search_link				{background-color:#000; color:#FFF;}
+a#search_link span			{color:#FFF;}
+a#search_link:hover			{background-color:#000; color:#FFF;}
+
+
+/*	Search Headers
+	============================================= */
+.search_cont				{margin:0 auto; padding:5px 0 10px 0; border-bottom:10px solid #000;}
+.search, .search_query		{display:inline-block; vertical-align:top;}
+.search						{width:240px;}
+.search.main				{width:720px;}
+.search.head				{font-size:2.0em; line-height:1.1em; color:#000;}
+.search_query				{font-size:1.1em; line-height:1.1em; color:#000; padding:0 30px 10px 0; width:210px;}
+.search_query span			{font-size:0.8em; display:block; padding-top:5px; font-style:italic;}
+
+
 /*	Table header styles
 	============================================= */
 th.titles					{color:#000; text-align:left; padding:10px 0 10px 20px; border-bottom:1px solid #000;}
@@ -233,22 +253,6 @@ th.titles:last-child		{min-width:100px;}
 table.head					{width:100%; margin:0 auto; border-collapse:initial;}
 table.head td				{cursor:default;}
 table.head img				{-webkit-filter:brightness(100%); filter:brightness(100%);}
-
-
-/*	Table for Search View
-	============================================= */
-table.search				{width:960px; margin:0 auto; padding:5px 0 20px 0; border-collapse:initial; border-bottom:10px solid #000;}
-table.search td.head		{font-size:2.0em; line-height:1.1em; color:#000;}
-table.search td				{font-size:1.0em; line-height:1.1em; color:#000; padding-top:10px; width:240px;}
-table.search td	span		{font-size:0.9em; display:block; padding-top:5px; font-style:italic;}
-
-table.search td.recipient, table.search td.donor, table.search td.sect_cat,
-table.search td.publisher	{width:210px; padding-right:30px;}
-
-table.search td.sect_cat, table.search td.publisher,
-table.search td.year		{padding-top:20px;}
-
-table.search td:hover		{cursor:default;}
 
 
 /*	Table for Country Name and Flag
