@@ -1,5 +1,6 @@
 body,html 				{color:rgba(0,0,255,1);}
 html					{background-color:rgba(0,0,0,1);}
+img						{-webkit-filter: brightness(100%) hue-rotate(80deg) saturate(500); filter: brightness(100%) hue-rotate(80deg) saturate(500);}
 
 
 /*	Links & fonts
@@ -145,9 +146,25 @@ a.csv_download:hover		{background-color:rgba(0,0,184,0.49); color:rgba(0,0,255,1
 .sectors_head_title			{background-color:rgba(0,0,107,1); color:rgba(0,0,255,1);}
 
 
+/*	For url #view=search
+	============================================= */
+.search_label				{color:rgba(0,0,255,1); border-bottom:1px solid rgba(0,0,255,1);}
+#search_div					{color:rgba(0,0,255,1);}
+a#search_link				{background-color:rgba(0,0,15,0.7); color:rgba(0,0,255,1);}
+a#search_link span			{color:rgba(0,0,255,1);}
+a#search_link:hover			{background-color:rgba(0,0,15,1);}
+	
+	
+/*	Search Headers
+	============================================= */
+.search_cont				{border-bottom:10px solid rgba(0,0,255,1);}
+.search.head				{color:rgba(0,0,255,1);}
+.search_query				{color:rgba(0,0,255,1);}
+
+
 /*	Table header styles
 	============================================= */
-th.titles					{color:#668; border-bottom:1px solid rgba(0,0,56,1);}
+th.titles					{color:rgba(0,0,255,1); border-bottom:1px solid rgba(0,0,56,1);}
 
 
 /*	Table for Header logo and Translations
@@ -178,7 +195,7 @@ table.stats td:hover	{background-color:rgba(0,0,15,0.9);}
 /*	Table for Active / Ended projects
 	============================================= */
 table.list td			{color:rgba(0,0,198,1); border-bottom:1px solid rgba(0,0,56,1);}
-table.list td span		{color:rgba(0,0,153,1);}
+table.list td span		{color:rgba(0,0,255,1);}
 table.list a			{color:rgba(0,0,204,1);}
 table.list a:focus		{color:rgba(0,0,255,1);}
 table.list a:link  		{color:rgba(0,0,204,1);}
@@ -231,7 +248,7 @@ table.money a:active		{color:rgba(0,0,204,1);}
 /*	Table for Activities list (Donors / Sectors)
 	============================================= */
 table.activity td		{color:rgba(0,0,198,1); border-bottom:1px solid rgba(0,0,56,1);}
-table.activity td span	{color:rgba(0,0,153,1);}
+table.activity td span	{color:rgba(0,0,255,1);}
 table.activity a		{color:rgba(0,0,204,1);}
 table.activity a:focus	{color:rgba(0,0,255,1);}
 table.activity a:link  	{color:rgba(0,0,204,1);}
@@ -259,12 +276,12 @@ a.data_invest:hover		{color:rgba(0,0,255,1); background-color:rgba(0,0,149,0.8);
 /*	Footer
 	============================================= */
 .footer_wrap			{background-color:rgba(0,0,0,0.95);}
-.footer_link a			{color:rgba(0,0,153,1);}
+.footer_link a			{color:rgba(0,0,255,1);}
 .footer_link a:focus	{color:rgba(0,0,255,1);}
-.footer_link a:link  	{color:rgba(0,0,153,1);}
-.footer_link a:visited	{color:rgba(0,0,153,1);}
-.footer_link a:hover	{color:rgba(0,0,255,1);}
-.footer_link a:active	{color:rgba(0,0,153,1);}
+.footer_link a:link  	{color:rgba(0,0,255,1);}
+.footer_link a:visited	{color:rgba(0,0,255,1);}
+.footer_link a:hover	{color:rgba(15,15,255,1);}
+.footer_link a:active	{color:rgba(0,0,255,1);}
 
 
 /*	SAVi CSS
