@@ -1,5 +1,6 @@
 body,html 				{color:rgba(0,255,0,1);}
 html					{background-color:rgba(0,0,0,1);}
+img						{-webkit-filter:brightness(100%) hue-rotate(300deg) saturate(500); filter:brightness(100%) hue-rotate(300deg) saturate(500);}
 
 
 /*	Links & fonts
@@ -145,9 +146,25 @@ a.csv_download:hover		{background-color:rgba(0,184,0,0.49); color:rgba(0,255,0,1
 .sectors_head_title			{background-color:rgba(0,107,0,1); color:rgba(0,255,0,1);}
 
 
+/*	For url #view=search
+	============================================= */
+.search_label				{color:rgba(0,255,0,1); border-bottom:1px solid rgba(0,255,0,1);}
+#search_div					{color:rgba(0,255,0,1);}
+a#search_link				{background-color:rgba(0,15,0,0.7); color:rgba(0,255,0,1);}
+a#search_link span			{color:rgba(0,255,0,1);}
+a#search_link:hover			{background-color:rgba(0,15,0,1);}
+	
+	
+/*	Search Headers
+	============================================= */
+.search_cont				{border-bottom:10px solid rgba(0,255,0,1);}
+.search.head				{color:rgba(0,255,0,1);}
+.search_query				{color:rgba(0,255,0,1);}
+
+
 /*	Table header styles
 	============================================= */
-th.titles					{color:#668; border-bottom:1px solid rgba(0,56,0,1);}
+th.titles					{color:rgba(0,153,0,1); border-bottom:1px solid rgba(0,56,0,1);}
 
 
 /*	Table for Header logo and Translations
