@@ -144,6 +144,22 @@ a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:rgba(255,2
 .sectors_head_title			{background-color:rgba(0,204,119,1); color:rgba(255,255,255,1);}
 
 
+/*	For url #view=search
+	============================================= */
+.search_label				{color:rgba(255,255,255,1); border-bottom:1px solid rgba(255,255,255,1);}
+#search_div					{color:rgba(255,255,255,1);}
+a#search_link				{background-color:rgba(0,14,32,0.7); color:rgba(83,180,237,1);}
+a#search_link span			{color:rgba(131,174,199,1);}
+a#search_link:hover			{background-color:rgba(0,14,32,0.9);}
+	
+	
+/*	Search Headers
+	============================================= */
+.search_cont				{border-bottom:10px solid rgba(255,255,255,1);}
+.search.head				{color:rgba(255,255,255,1);}
+.search_query				{color:rgba(255,255,255,1);}
+
+
 /*	Table header styles
 	============================================= */
 th.titles					{color:rgba(102,102,136,1); border-bottom:1px solid rgba(51,51,68,1);}
