@@ -1,5 +1,6 @@
 body,html 				{color:rgba(255,0,0,1);}
 html					{background-color:rgba(0,0,0,1);}
+img						{-webkit-filter:brightness(100%) hue-rotate(200deg) saturate(50); filter:brightness(100%) hue-rotate(200deg) saturate(50);}
 
 
 /*	Links & fonts
@@ -143,6 +144,22 @@ a.csv_download:hover		{background-color:rgba(184,0,0,0.49); color:rgba(255,0,0,1
 	============================================= */
 .sectors_peak				{border-right:30px solid rgba(107,0,0,1);}
 .sectors_head_title			{background-color:rgba(107,0,0,1); color:rgba(255,0,0,1);}
+
+
+/*	For url #view=search
+	============================================= */
+.search_label				{color:rgba(255,0,0,1); border-bottom:1px solid rgba(255,0,0,1);}
+#search_div					{color:rgba(255,0,0,1);}
+a#search_link				{background-color:rgba(15,0,0,0.7); color:rgba(255,0,0,1);}
+a#search_link span			{color:rgba(255,0,0,1);}
+a#search_link:hover			{background-color:rgba(15,0,0,1);}
+	
+	
+/*	Search Headers
+	============================================= */
+.search_cont				{border-bottom:10px solid rgba(255,0,0,1);}
+.search.head				{color:rgba(255,0,0,1);}
+.search_query				{color:rgba(255,0,0,1);}
 
 
 /*	Table header styles
