@@ -848,3 +848,15 @@ IATI出版社
 
 #search_view_txt
 您搜索：
+
+#search_text_txt
+文本搜索
+
+#search_button1_txt
+浏览搜索结果
+
+#search_button2_txt
+（打开新窗口）
+
+#search_placeholder_txt
+键入要搜索和按Enter键或点击添加
