@@ -846,3 +846,15 @@ Year
 
 #search_view_txt
 You searched:
+
+#search_text_txt
+Text Search
+
+#search_button1_txt
+Explore Search Results
+
+#search_button2_txt
+(Opens in new window)
+
+#search_placeholder_txt
+Type to Search & press Enter (eg. water) or Click to Add
