@@ -848,3 +848,15 @@ An
 
 #search_view_txt
 Vous avez cherché:
+
+#search_text_txt
+Recherche texte
+
+#search_button1_txt
+Explorez Résultats
+
+#search_button2_txt
+(Ouvre nouvelle fenêtre)
+
+#search_placeholder_txt
+Tapez à la recherche et appuyez sur Entrée ou sur pour ajouter
