@@ -223,21 +223,27 @@
 
 #main_searchmin
 <div class="default min">
-	<table class="search">
-		<tr>
-			<td colspan="3" rowspan="3" class="head">{search_view_txt}</td>
-			<td><span class="recipient">Korea, Democratic People's Republic of</span><span>( {search_recipient_txt})</span></td>
-            <td><span class="donor">Organisation for Security and Co-operation in Europe</span><span>( {search_donor_txt})</span></td>
-            <td><span class="sector">Civilian peace-building, conflict prevention and resolution</span><span>( {search_sector_txt})</span></td>
-          </tr><tr>
-            <td><span class="sect_cat">Agriculture and food security</span><span>( {search_sectorcategory_txt})</span></td>
-            <td><span class="publisher">Agency for Cooperation and Research in Development (ACORD)</span><span>( {search_publisher_txt})</span></td>
-            <td><span class="year">1997</span><span>( {search_year_txt})</span></td>
-          </tr>
-          </tr><tr>
-			<td><span class="text">...</span><span>( text search )</span></td>
-          </tr>
-	</table>
+	<div class="search_cont">
+		<div class="search head">
+			{search_view_txt}
+		</div><div class="search main">
+			<div class="search_query">
+				<div class="recipient"></div><span>( {search_recipient_txt})</span>
+			</div><div class="search_query">
+				<div class="donor"></div><span>( {search_donor_txt})</span>
+			</div><div class="search_query">
+				<div class="sector"></div><span>( {search_sector_txt})</span>
+			</div><div class="search_query">
+				<div class="sect_cat"></div><span>( {search_sectorcategory_txt})</span>
+			</div><div class="search_query">
+				<div class="publisher"></div><span>( {search_publisher_txt})</span>
+			</div><div class="search_query">
+				<div class="year"></div><span>( {search_year_txt})</span>
+			</div><div class="search_query">
+				<div class="text">...</div><span>( {search_text_txt})</span>
+			</div>
+		</div>
+	</div>
 </div>
 	
 #main_max
@@ -266,21 +272,27 @@
 
 #main_search
 <div class="default min">
-	<table class="search">
-		<tr>
-			<td colspan="3" rowspan="3" class="head">{search_view_txt}</td>
-			<td><span class="recipient">Korea, Democratic People's Republic of</span><span>( {search_recipient_txt})</span></td>
-            <td><span class="donor">Organisation for Security and Co-operation in Europe</span><span>( {search_donor_txt})</span></td>
-            <td><span class="sector">Civilian peace-building, conflict prevention and resolution</span><span>( {search_sector_txt})</span></td>
-          </tr><tr>
-            <td><span class="sect_cat">Agriculture and food security</span><span>( {search_sectorcategory_txt})</span></td>
-            <td><span class="publisher">Agency for Cooperation and Research in Development (ACORD)</span><span>( {search_publisher_txt})</span></td>
-            <td><span class="year">1997</span><span>( {search_year_txt})</span></td>
-          </tr>
-          </tr><tr>
-			<td><span class="text">...</span><span>( text search )</span></td>
-          </tr>
-	</table>
+	<div class="search_cont">
+		<div class="search head">
+			{search_view_txt}
+		</div><div class="search main">
+			<div class="search_query">
+				<div class="recipient"></div><span>( {search_recipient_txt})</span>
+			</div><div class="search_query">
+				<div class="donor"></div><span>( {search_donor_txt})</span>
+			</div><div class="search_query">
+				<div class="sector"></div><span>( {search_sector_txt})</span>
+			</div><div class="search_query">
+				<div class="sect_cat"></div><span>( {search_sectorcategory_txt})</span>
+			</div><div class="search_query">
+				<div class="publisher"></div><span>( {search_publisher_txt})</span>
+			</div><div class="search_query">
+				<div class="year"></div><span>( {search_year_txt})</span>
+			</div><div class="search_query">
+				<div class="text"></div><span>( {search_text_txt})</span>
+			</div>
+		</div>
+	</div>
 </div>
 
 
