@@ -845,3 +845,15 @@ IATI प्रकाशक
 
 #search_view_txt
 आप खोज:
+
+#search_text_txt
+पाठ्य खोज
+
+#search_button1_txt
+खोजें संभावनाएं हैं?
+
+#search_button2_txt
+(नई विंडो में खुलता है)
+
+#search_placeholder_txt
+खोज एवं प्रेस दर्ज करें या जोड़ने के लिए क्लिक करने के लिए लिखें
