@@ -848,3 +848,15 @@ IATI出版
 
 #search_view_txt
 検索結果：
+
+#search_text_txt
+テキスト検索
+
+#search_button1_txt
+検索結果を探索
+
+#search_button2_txt
+（新しいウィンドウで開きます）
+
+#search_placeholder_txt
+検索・Enterを押しますか追加するクリックしと入力
