@@ -845,3 +845,15 @@ Año
 
 #search_view_txt
 Ha buscado:
+
+#search_text_txt
+Búsqueda de texto
+
+#search_button1_txt
+Explora Resultados de la búsqueda
+
+#search_button2_txt
+(Abre en ventana nueva)
+
+#search_placeholder_txt
+Escriba a Buscar y pulse Intro o haga clic a Agregar
