@@ -7,7 +7,7 @@
 
 #view_search
 {view_head}
-<style>.crumb_wrap{display:none;}{css}</style>
+<style>.crumb_wrap{display:none;}#background_image{url('/art/mexico_background_image.jpg')};{css}</style>
 {beige}
 {main_head}
 {view_search_test}
@@ -18,37 +18,37 @@
 <div id="view_search_test">
 
 <div class="search_wrap">
-	<div class="search_label"><img src="{art}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}</div>
+	<div class="search_label"><img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}</div>
 <select id="view_search_select_country" class="chosen2">
 	<option value></option>
 	{search_options_country}
 </select>
 </div><div class="search_wrap">
-	<div class="search_label"><img src="{art}search_funder.png" alt="Funder icon" width="13" height="13"/>{search_donor_txt}</div>
+	<div class="search_label"><img src="{flava}search_funder.png" alt="Funder icon" width="13" height="13"/>{search_donor_txt}</div>
 <select id="view_search_select_funder" class="chosen2">
 	<option value></option>
 	{search_options_funder}
 </select>
 </div><div class="search_wrap">
-	<div class="search_label"><img src="{art}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}</div>
+	<div class="search_label"><img src="{flava}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}</div>
 <select id="view_search_select_sector" class="chosen2">
 	<option value></option>
 	{search_options_sector}
 </select>
 </div><div class="search_wrap">
-	<div class="search_label"><img src="{art}search_category.png" alt="Sector Category icon" width="13" height="13"/>{search_sectorcategory_txt}</div>
+	<div class="search_label"><img src="{flava}search_category.png" alt="Sector Category icon" width="13" height="13"/>{search_sectorcategory_txt}</div>
 <select id="view_search_select_category" class="chosen2">
 	<option value></option>
 	{search_options_category}
 </select>
 </div><div class="search_wrap">
-	<div class="search_label"><img src="{art}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}</div>
+	<div class="search_label"><img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}</div>
 <select id="view_search_select_publisher" class="chosen2">
 	<option value></option>
 	{search_options_publisher}
 </select>
 </div><div class="search_wrap">
-	<div class="search_label"><img src="{art}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt}</div>
+	<div class="search_label"><img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt}</div>
 <select id="view_search_select_year" class="chosen2">
 	<option value></option>
 	{search_options_year}
@@ -59,14 +59,14 @@
 <span id="result_span"></span>
 </div>
 
-<input type="text" id="view_search_string" class="typeahead" placeholder="Type to Search"/>
+<input type="text" id="view_search_string" class="typeahead" placeholder="{search_placeholder_txt}"/>
 
 <div id="search_div">
 <div>
 <span id="search_span"></span>
 </div>
 <div>
-<a id="search_link" target="_blank">Explore Search Results<span>(Opens in new window)</span></a>
+<a id="search_link" target="_blank">{search_button1_txt}<span>{search_button2_txt}</span></a>
 </div>
 
 <div></div>
