@@ -1,3 +1,13 @@
+Development Portal (2015-07-24 shi)
+==============================
+Reorganised Search queries layout
+Added translations for Search
+Fixed layout for main and minimised versions
+Added CSS for Print-Friendly version
+Added icons for Print-Friendly version
+Fixed background image for Search
+
+
 Development Portal (2015-07-23 shi)
 ==============================
 Added translations for Search
